# spark-harness-core

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  package.json  pyproject.toml  spark.toml
.github/workflows/: ci.yml  spark-shared-ci.yml
conformance/vectors/: canonical-json-core.json  canonical-json-signature.json  degrade-missing-ledger.json  execute-signed-confidence-one.json  expired-authorization.json  interrupt-confirmation.json  tampered-signature.json
docs/: RUNTIME_CHARTER.md  SPARK_GENESIS_KERNEL_SCHEMA_DESIGN.md
rulesets/opengrep/: harness-core-security.yml
schemas/: authorization-decision-v1.schema.json  readiness-score-v1.schema.json
scripts/: canonical-json-interop.mjs  run-conformance.mjs  verify_distribution_drift.py
src/spark_harness_core/: __init__.py  cli.py  consumer_conformance.py  governor_signature.py  kernel.py  legacy_turn_intent.py  schemas.py  sdk.py  wire_contract.py
tests/: test_canonical_json_interop.py  test_conformance.py  test_consumer_conformance.py  test_distribution_drift.py  test_kernel_contracts.py  test_typescript_contracts.py  test_wire_contract_versioning.py
ts/: index.ts  node-crypto.d.ts
ts-dist/: index.d.ts  index.js
ts-dist-esm/: index.mjs
