[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spark-harness-core"
version = "0.1.0"
description = "Spark newborn agent harness kernel and language-neutral contracts"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
dependencies = [
    "jsonschema>=4.22.0",
    "referencing>=0.35.0",
]

[project.scripts]
spark-harness-core = "spark_harness_core.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402"]
